<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/orig_description"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_background"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_orig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/v_background_gradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_orig"
        android:background="@drawable/shape_background_gradient"/>

    <ImageView
        android:id="@+id/iv_top_menu_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/top_menu_back_arrow_description"
        android:src="@drawable/ic_menu_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_movie_actor_photo1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/actor_photo_margin_top"
        android:layout_marginEnd="@dimen/actor_photo_margin_side"
        android:contentDescription="@string/actor_name1"
        android:src="@drawable/pic_movie_actor1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/siv_movie_actor_photo2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/tv_cast_header"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_movie_actor_photo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/actor_photo_margin_top"
        android:layout_marginEnd="@dimen/actor_photo_margin_side"
        android:contentDescription="@string/actor_name2"
        android:src="@drawable/pic_movie_actor2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/siv_movie_actor_photo3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/siv_movie_actor_photo1"
        app:layout_constraintTop_toBottomOf="@id/tv_cast_header" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_movie_actor_photo3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/actor_photo_margin_top"
        android:layout_marginEnd="@dimen/actor_photo_margin_side"
        android:contentDescription="@string/actor_name3"
        android:src="@drawable/pic_movie_actor3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/siv_movie_actor_photo4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/siv_movie_actor_photo2"
        app:layout_constraintTop_toBottomOf="@id/tv_cast_header" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_movie_actor_photo4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/actor_photo_margin_top"
        android:contentDescription="@string/actor_name4"
        android:src="@drawable/pic_movie_actor4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/siv_movie_actor_photo3"
        app:layout_constraintTop_toBottomOf="@id/tv_cast_header" />

    <TextView
        android:id="@+id/tv_top_menu_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/back_caption"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintLeft_toRightOf="@id/iv_top_menu_back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_name_helper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_orig"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_right" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toTopOf="@id/tv_movie_name_helper"/>

    <View
        android:id="@+id/v_content_rating_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_movie_content_rating"
        app:layout_constraintRight_toRightOf="@id/tv_movie_content_rating"
        app:layout_constraintTop_toTopOf="@id/tv_movie_content_rating"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_content_rating"
        android:background="@drawable/shape_rounded_rect"/>

    <TextView
        android:id="@+id/tv_movie_content_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/content_rating"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:paddingVertical="2dp"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_name"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left" />

    <TextView
        android:id="@+id/tv_movie_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/genre"
        android:textColor="@color/maroon"
        android:textSize="@dimen/text_size_general"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_name" />

    <TextView
        android:id="@+id/tv_reviews_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/reviews_number_margin"
        android:text="@string/reviews_num"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_general"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/rb_rating_stars"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_genre"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_storyline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/storyline_header"
        android:textColor="@color/text_general"
        android:textSize="@dimen/text_size_general"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/tv_reviews_number" />

    <TextView
        android:id="@+id/tv_storyline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        android:text="@string/storyline_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_general"
        android:textIsSelectable="true"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@id/tv_storyline_header" />

    <TextView
        android:id="@+id/tv_cast_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="2dp"
        android:text="@string/cast_header"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_general"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@id/tv_storyline_text" />

    <TextView
        android:id="@+id/tv_movie_actor_name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_movie_actor_name2"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/siv_movie_actor_photo1"
        android:text="@string/actor_name1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/tv_movie_actor_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_movie_actor_name3"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_actor_name1"
        app:layout_constraintTop_toBottomOf="@id/siv_movie_actor_photo2"
        android:text="@string/actor_name2"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/tv_movie_actor_name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_movie_actor_name4"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_actor_name2"
        app:layout_constraintTop_toBottomOf="@id/siv_movie_actor_photo3"
        android:text="@string/actor_name3"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/tv_movie_actor_name4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_actor_name3"
        app:layout_constraintTop_toBottomOf="@id/siv_movie_actor_photo4"
        android:text="@string/actor_name4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="6dp"/>

    <View
        android:id="@+id/v_movie_genre_helper"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_genre" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rb_rating_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_movie_genre_helper"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_left"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4"
        android:progressTint="@color/maroon"
        android:progressBackgroundTint="@color/gray"
        android:backgroundTint="@color/gray"
        android:secondaryProgressTint="@color/gray"
        style="?android:attr/ratingBarStyleSmall"/>

    <View
        android:id="@+id/v_end_of_screen_helper"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_end_of_screen" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_reviews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="v_movie_genre_helper" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_end_of_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_movie_actor_name1,tv_movie_actor_name2,tv_movie_actor_name3,tv_movie_actor_name4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_orig"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>