<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginHorizontal="6dp"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/background"
    app:strokeWidth="2dp"
    app:strokeColor="@color/gray_850">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_movie_image_in_list"
            android:layout_gravity="top"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/v_movie_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_background_gradient"
            app:layout_constraintBottom_toBottomOf="@id/tv_movie_genre"
            app:layout_constraintLeft_toLeftOf="@id/iv_movie_image"
            app:layout_constraintRight_toRightOf="@id/iv_movie_image"
            app:layout_constraintTop_toTopOf="@id/iv_movie_image"/>

        <View
            android:id="@+id/v_content_rating_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_movie_content_rating"
            app:layout_constraintRight_toRightOf="@id/tv_movie_content_rating"
            app:layout_constraintTop_toTopOf="@id/tv_movie_content_rating"
            app:layout_constraintBottom_toBottomOf="@id/tv_movie_content_rating"
            android:background="@drawable/shape_rounded_rect"
            android:backgroundTint="@color/gray_850"/>

        <View
            android:id="@+id/v_background_gradient_helper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_genre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_image"
            android:background="@color/background"/>

        <TextView
            android:id="@+id/tv_movie_content_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:paddingVertical="4dp"
            android:paddingHorizontal="2dp"
            android:gravity="center"
            android:text="@string/content_rating"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/iv_movie_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like_off"
            android:contentDescription="@string/like_movie_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"/>

        <View
            android:id="@+id/v_content_rating_helper"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintLeft_toLeftOf="@id/iv_movie_image"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_image"/>

        <RatingBar
            android:id="@+id/rb_rating_stars"
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            app:layout_constraintBottom_toTopOf="@id/v_content_rating_helper"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_genre"
            app:layout_constraintLeft_toLeftOf="@id/v_content_rating_helper"
            android:numStars="5"
            android:rating="3.5"
            android:progressTint="@color/maroon"
            android:layout_marginLeft="8dp"
            style="@style/CustomRatingBar"/>

        <TextView
            android:id="@+id/tv_reviews_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/reviews_number_margin"
            android:text="@string/reviews_num"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/text_size_very_small"
            android:fontFamily="@font/roboto_black"
            android:paddingVertical="1dp"
            app:layout_constraintLeft_toRightOf="@id/rb_rating_stars"
            app:layout_constraintBottom_toTopOf="@id/v_content_rating_helper"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tv_movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="@dimen/text_size_very_small"
            android:textColor="@color/maroon"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_reviews_number"
            android:paddingStart="8dp"
            android:paddingVertical="2dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_image"
            android:text="@string/movie_name"
            android:textSize="@dimen/text_size_general"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_black"
            android:paddingStart="8dp"
            android:paddingVertical="3dp"
            android:layout_marginTop="8dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_movie_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_duration"
            android:textAllCaps="true"
            android:textColor="@color/gray_750"
            android:textSize="@dimen/text_size_very_small"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingStart="8dp"
            android:paddingVertical="2dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/v_card_bottom"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_duration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
